# wineman

./: CMakeLists.txt  LICENSE  README.md  ansi_color_codes.h  data.json  main.c  outeffects.c  outeffects.h  wineman
